--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "VITE_MSW=true vite",
     "dev:playwright": "vite",
     "build": "tsc -b && vite build",
+    "test": "playwright test",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "tsc": "tsc -b",
     "preview": "vite preview",
